# product-viewer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
modules/: generate_changelog
product-viewer/: Homepage.py
product-viewer/pages/: Cart.py  Products.py
product-viewer/pdf_generator/: pdf_generator.py
product-viewer/product-viewer/assets/css/: styles.css
product-viewer/product-viewer/pdf_generator/: pdf_generator.py
product-viewer/product-viewer/utils/: components.py  image_utils.py
product-viewer/utils/: database.py  styles.py
